# aieda

./: .gitignore  Cargo.toml  README.md  README_WINDOWS.txt  SETUP.md  app.js  build_windows.bat  cadence.html  data.js  dpc4_sniper_comparison.html  index.html  opensource.html  run.bat  run_simulation.ps1  s2c.html  siemens.html  style.css  styles.css  synopsys.html  wrangler.jsonc  xinhua.html
AgenticByteDance/: Agentic_AI_CPU_Design_Space.pptx  README.md  diagram_generator.html  generate_agi_cpu_ppt.py
arm-locks-visualization/: app.js  barrier.html  barrier.js  data.js  detail.js  diagrams.js  index.html  lock-detail.html  styles.css
examples/: binary_trace_simulation.rs  cpu_emulator.rs  debug_timing.rs  debug_timing2.rs  debug_viz.rs  elf_test.rs  elf_to_konata.rs  elf_viz.rs  generate_konata.rs  new_instructions_demo.rs  simple_test.rs  spec17_all_traces.rs  spec17_synthetic_benchmark.rs  spec17_trace_generator.rs  spec17_trace_runner.rs  spec17_validation.rs  spec17_viz_server.rs  spec_debug.rs  test_dependency_timing.rs  test_konata_timing.rs  viz_server.rs
gtc2026/: app.js  data.js  index.html  style.css
gtc26leaks/: data.js
scripts/: download_spec17_traces.sh
src/: config.rs  cpu.rs  lib.rs  types.rs
test_programs/: compute.elf  fibonacci.elf  matrix.elf  test_arm64.elf  test_dependency.elf  test_real.elf
tests/: integration_tests.rs  memory_dependency_test.rs
traces/: 600.perlbench_s.trace  602.gcc_s.trace  603.bwaves_s.trace  cam4.trace  konata_visualization.json  mcf.trace
validation/: Cargo.toml
visualization/: package.json  run_test.sh
(+92 files in other folders)
